[package]
name = "usrnet"
version = "0.1.0"
authors = ["Andrei Maximov <andrei.maximov@gmail.com>"]

[dependencies]
byteorder = "1.0"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
rand = "0.4"

[dev-dependencies]
assert_matches = "1.1.0"
clap = "2.30.0"
env_logger = "0.5.3"

[[example]]
name = "arping"

[[example]]
name = "dev_up"

[[example]]
name = "ping"

[[example]]
name = "tcp_echo_client"

[[example]]
name = "traceroute"

[[example]]
name = "udp_echo_server"
